--- a/ExerciseSheet_6.Rmd
+++ b/ExerciseSheet_6.Rmd
@@ -62,7 +62,7 @@ in a string and determines its parity.
 
 b)  To make installation easier, your R package should be in a public
     repository on GitHub. Provide the URL to the GitHub repository
-    below:`https://github.com/.../exeRcise-sheet-6'
+    below:`https://github.com/Sungho-Park-DE/ExerciseSheet_6'
 
 c)  Your R package should be installable via
     `remotes::install_github()`. Before submitting your solution to this
@@ -70,7 +70,7 @@ c)  Your R package should be installable via
     from GitHub. Provide the command below:
 
 ``` r
-remotes::install_github(".../exeRcise-sheet-6/sunghojonas")
+remotes::install_github("Sungho-Park-DE/ExerciseSheet_6/sunghojonas")
 ```
 
 ### Functionality
